--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "farmhash": "^3.3.0",
+    "helmet": "^7.0.0",
+    "mongoose": "^7.4.1",
     "socket.io": "^4.7.1",
     "socket.io-redis": "^6.1.1"
   }
